<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    >

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/add_note_title"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/notes_background"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="100dp"
        android:padding="10dp"
        android:hint="@string/description"
        android:gravity="end|start"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:background="@drawable/notes_background"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note_save"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/low_dark_sky_blue"
        />



</LinearLayout>