<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lend_borrow_date"
                android:textSize="@dimen/textsize_20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date_expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20_05_2020"
                android:textSize="@dimen/textsize_18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lend_borrow_amount"
                android:textSize="@dimen/textsize_20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_amount_expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_500"
                android:textSize="@dimen/textsize_18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout">

        </LinearLayout>

        <!--        <androidx.appcompat.widget.AppCompatTextView-->
        <!--            android:id="@+id/appCompatTextView"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/tv_description"-->
        <!--            android:textSize="@dimen/textsize_18sp"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_desc_expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_description"
            android:textSize="@dimen/textsize_16sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

<!--        <View-->
<!--            android:layout_marginTop="@dimen/_5sdp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="#FF000000"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tv_desc_expenses" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
