<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/dashboard_background_gradient">

    <RelativeLayout
        android:id="@+id/top_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/website"
            android:layout_marginBottom="@dimen/_10sdp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_relative_layout"
        android:gravity="center|top"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <androidx.cardview.widget.CardView
            android:layout_width="330dp"
            android:layout_height="360dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fg_secure_word_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/enter_your_secure_word"
                    android:textColorHint="@color/dark_sky_blue"
                    android:textSize="@dimen/textSize_22sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fg_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/enter_your_new_password"
                    android:textColorHint="@color/dark_sky_blue"
                    android:textSize="@dimen/textSize_22sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fg_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/please_re_enter_your_new_password"
                    android:textColorHint="@color/dark_sky_blue"
                    android:textSize="@dimen/textSize_22sp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_fg_password"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_7sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_button_shape"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/confirm"
                    android:textSize="@dimen/textsize_20sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>


</RelativeLayout>
</ScrollView>