<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_5sdp"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_lb_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lend_borrow_name"
                android:textSize="@dimen/textsize_20sp"
                android:fontFamily="@font/cairo_semibold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_20sp"
                    android:text="@string/lend_borrow_amount"
                    android:fontFamily="@font/cairo_light"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_14sp"
                    android:text="@string/lend_borrow_date"
                    android:fontFamily="@font/cairo_light"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_lb_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_20sp"
                    android:text="@string/lend_borrow_amount"
                    android:fontFamily="@font/cairo_semibold"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_lb_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_14sp"
                    android:text="@string/lend_borrow_date"
                    android:fontFamily="@font/cairo_light"/>

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>

</com.google.android.material.card.MaterialCardView>